[package]
name = "wikipedia-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
parse-wiki-text-2 = { git = "https://github.com/emmalexandria/parse-wiki-text-2", version = "0.1.6-alpha.0" }
quick-xml = "0.31.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = {version ="1.0.196", features = ["derive"]}
wikidump = "0.3.0"
